<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <!-- Верхний прямоугольник с заголовком -->
    <TextView
        android:id="@+id/tv_chats_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tv_chats_title"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Список чатов -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_chats_title"
        tools:listitem="@layout/item_chat" />

    <!-- Нижний прямоугольник с кнопками -->
    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_rectangle"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="1"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="1">

        <!-- Кнопки, расположенные поверх синего прямоугольника -->
        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/logout"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logout" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/search"
            android:scaleType="centerInside"
            android:src="@drawable/ic_search" />

        <ImageButton
            android:id="@+id/btn_profile"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/profile"
            android:scaleType="centerInside"
            android:src="@drawable/ic_profile" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>